--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background-color: #0a0f2c;
+  background-color: #242424;
   color: #f6f8ff;
   display: flex;
   align-items: center;
